Removing unsupported (and hopefully unnecessary) JVM options
As part for Java 8 -> Java 11 upgrade