@@ -20,11 +20,6 @@ javacOptions := Seq("-g","-encoding", "utf8")
 
 Universal / javaOptions ++= Seq(
     "-Dpidfile.path=/dev/null",
-    "-J-XX:MaxRAMFraction=2",
-    "-J-XX:InitialRAMFraction=2",
-    "-J-XX:MaxMetaspaceSize=500m",
-    "-J-XX:+PrintGCDetails",
-    "-J-XX:+PrintGCDateStamps",
     s"-J-Xloggc:/var/log/${packageName.value}/gc.log"
 )
 
